fix: show line breaks in meal card notes

--- a/src/app/schedule/components/meal-card/meal-card.component.scss
+++ b/src/app/schedule/components/meal-card/meal-card.component.scss
@@ -9,6 +9,10 @@
     letter-spacing: 0.03rem;
 }
 
+.card-text {
+    white-space: pre-line;
+}
+
 .empty {
     border-color: #eeeeee;
 
